--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <img
             class="team-member-image"
             img
-            src="images/LATJOR WUON.jpg"
+            src="images/LATJOR_WUON.jpg"
             alt="Latjor Wuon Lat Dak"
           />
           <h3>Latjor Wuon Lat Dak</h3>
@@ -168,7 +168,7 @@
           <img
             class="team-member-image"
             img
-            src="images/Stephen Dak.jpg"
+            src="images/Stephen_Dak.jpg"
             alt="Stephen Dak"
           />
           <h3>Stephen Dak</h3>
@@ -178,7 +178,7 @@
           <img
             class="team-member-image"
             img
-            src="images/Gatkuoth Gai.jpg"
+            src="images/Gatkuoth_Gai.jpg"
             alt="Gatkuoth Gai "
           />
           <h3>Gatkuoth Gai</h3>
@@ -187,7 +187,7 @@
         <div class="team member">
           <img
             class="team-member-image"
-            src="images/Sammy Wadar.jpg"
+            src="images/Sammy_Wadar.jpg"
             alt="Sammy Wadar"
           />
           <h3>Sammy Wadar</h3>
@@ -196,7 +196,7 @@
         <div class="team member">
           <img
             class="team-member-image"
-            src="images/Alfred Gaw.jpg"
+            src="images/Alfred_Gaw.jpg"
             alt="Alfred Gaw"
           />
           <h3>Alfred Gaw</h3>
